feat: weather prediction form logic

--- a/cu_weather_app/templates/weather.html
+++ b/cu_weather_app/templates/weather.html
@@ -2,7 +2,7 @@
 
 {% block main %}
   <h1>Проверка погодных условий</h1>
-  <form action="/weather" method="post">
+  <form action="/" method="post">
     <label for="start_city">Начальный город:</label>
     <input type="text" id="start_city" name="start_city" required>
     <br>
